src/syn/snapshots/tvm__syn__tests__assignment.snap
---
source: src/syn/tests.rs
expression: "parse!(r#\"\n    name = 1;\n    name += 1;\n    name -= 1;\n    name /= 1;\n    name *= 1;\n    name %= 1;\n    name **= 1;\n    name ??= 1;\n  \"#)"
---
Ast {
    decls: [],
    top_level: Block {
        body: [
            Expr(
                AssignVar(
                    Ident("name"),
                    None,
                    Literal(
                        Int(1),
                    ),
                ),
            ),
            Expr(
                AssignVar(
                    Ident("name"),
                    Some(
                        Op(+),
                    ),
                    Literal(
                        Int(1),
                    ),
                ),
            ),
            Expr(
                AssignVar(
                    Ident("name"),
                    Some(
                        Op(-),
                    ),
                    Literal(
                        Int(1),
                    ),
                ),
            ),
            Expr(
                AssignVar(
                    Ident("name"),
                    Some(
                        Op(/),
                    ),
                    Literal(
                        Int(1),
                    ),
                ),
            ),
            Expr(
                AssignVar(
                    Ident("name"),
                    Some(
                        Op(*),
                    ),
                    Literal(
                        Int(1),
                    ),
                ),
            ),
            Expr(
                AssignVar(
                    Ident("name"),
                    Some(
                        Op(%),
                    ),
                    Literal(
                        Int(1),
                    ),
                ),
            ),
            Expr(
                AssignVar(
                    Ident("name"),
                    Some(
                        Op(**),
                    ),
                    Literal(
                        Int(1),
                    ),
                ),
            ),
            Expr(
                AssignVar(
                    Ident("name"),
                    Some(
                        Op(??),
                    ),
                    Literal(
                        Int(1),
                    ),
                ),
            ),
        ],
        tail: None,
    },
}
