src/syn/snapshots/tvm__syn__tests__bin_add.snap
---
source: src/syn/tests.rs
expression: "parse!(r#\"\n    2 + 2\n  \"#)"
---
SyntaxTree {
    top_level: Block {
        span: Span {
            start: 0,
            end: 0,
        },
        body: [],
        tail: Some(
            BinaryExpr {
                left: LiteralExpr {
                    value: Int(
                        2,
                    ),
                },
                op: Add,
                right: LiteralExpr {
                    value: Int(
                        2,
                    ),
                },
            },
        ),
    },
}
