src/syn/snapshots/tvm__syn__tests__block_expr.snap
---
source: src/syn/tests.rs
expression: "parse!(r#\"\n    let v = do { 1 };\n  \"#)"
---
SyntaxTree {
    top_level: Block {
        span: Span {
            start: 0,
            end: 17,
        },
        body: [
            LetStmt {
                name: Ident {
                    span: Span {
                        start: 4,
                        end: 5,
                    },
                    lexeme: "v",
                },
                ty: None,
                init: Some(
                    BlockExpr {
                        inner: Block {
                            span: Span {
                                start: 11,
                                end: 16,
                            },
                            body: [],
                            tail: Some(
                                LiteralExpr {
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                        },
                    },
                ),
            },
        ],
        tail: None,
    },
}
