src/syn/snapshots/tvm__syn__tests__control_expressions.snap
---
source: src/syn/tests.rs
expression: "parse!(r#\"\n    return value;\n    return;\n    break;\n    continue;\n\n    let v = return value;\n    let v = return;\n    let v = break;\n    let v = continue;\n  \"#)"
---
Ast {
    decls: [],
    top_level: Block {
        body: [
            Expr(
                Return(
                    Some(
                        UseVar(
                            Ident("value"),
                        ),
                    ),
                ),
            ),
            Expr(
                Return(
                    None,
                ),
            ),
            Expr(
                Break,
            ),
            Expr(
                Continue,
            ),
            Let(
                Ident("v"),
                None,
                Return(
                    Some(
                        UseVar(
                            Ident("value"),
                        ),
                    ),
                ),
            ),
            Let(
                Ident("v"),
                None,
                Return(
                    None,
                ),
            ),
            Let(
                Ident("v"),
                None,
                Break,
            ),
            Let(
                Ident("v"),
                None,
                Continue,
            ),
        ],
        tail: None,
    },
}
