src/syn/snapshots/tvm__syn__tests__function.snap
---
source: src/syn/tests.rs
expression: "parse!(r#\"\n        fn f() {}\n        fn f(a: A) {}\n        fn f(a: A, b: B, c: C) {}\n        fn f() -> R {}\n        fn f(a: A) -> R {}\n        fn f(a: A, b: B, c: C) -> R {}\n\n        extern fn f();\n    \"#)"
---
Ast {
    decls: [
        Fn {
            name: Ident("f"),
            params: [],
            ret: None,
            body: Block(
                Block {
                    body: [],
                    tail: None,
                },
            ),
        },
        Fn {
            name: Ident("f"),
            params: [
                Param(
                    Ident("a"),
                    Named(
                        Named {
                            name: Ident("A"),
                        },
                    ),
                ),
            ],
            ret: None,
            body: Block(
                Block {
                    body: [],
                    tail: None,
                },
            ),
        },
        Fn {
            name: Ident("f"),
            params: [
                Param(
                    Ident("a"),
                    Named(
                        Named {
                            name: Ident("A"),
                        },
                    ),
                ),
                Param(
                    Ident("b"),
                    Named(
                        Named {
                            name: Ident("B"),
                        },
                    ),
                ),
                Param(
                    Ident("c"),
                    Named(
                        Named {
                            name: Ident("C"),
                        },
                    ),
                ),
            ],
            ret: None,
            body: Block(
                Block {
                    body: [],
                    tail: None,
                },
            ),
        },
        Fn {
            name: Ident("f"),
            params: [],
            ret: Some(
                Named(
                    Named {
                        name: Ident("R"),
                    },
                ),
            ),
            body: Block(
                Block {
                    body: [],
                    tail: None,
                },
            ),
        },
        Fn {
            name: Ident("f"),
            params: [
                Param(
                    Ident("a"),
                    Named(
                        Named {
                            name: Ident("A"),
                        },
                    ),
                ),
            ],
            ret: Some(
                Named(
                    Named {
                        name: Ident("R"),
                    },
                ),
            ),
            body: Block(
                Block {
                    body: [],
                    tail: None,
                },
            ),
        },
        Fn {
            name: Ident("f"),
            params: [
                Param(
                    Ident("a"),
                    Named(
                        Named {
                            name: Ident("A"),
                        },
                    ),
                ),
                Param(
                    Ident("b"),
                    Named(
                        Named {
                            name: Ident("B"),
                        },
                    ),
                ),
                Param(
                    Ident("c"),
                    Named(
                        Named {
                            name: Ident("C"),
                        },
                    ),
                ),
            ],
            ret: Some(
                Named(
                    Named {
                        name: Ident("R"),
                    },
                ),
            ),
            body: Block(
                Block {
                    body: [],
                    tail: None,
                },
            ),
        },
        Fn {
            name: Ident("f"),
            params: [],
            ret: None,
            body: Extern,
        },
    ],
    top_level: Block {
        body: [],
        tail: None,
    },
}
