src/syn/snapshots/tvm__syn__tests__invalid_escapes.snap
---
source: src/syn/tests.rs
expression: "parse!(r#\"\n        \"\\{\";\n        \"\\}\";\n    \"#)"
---
error: invalid escape sequence
1 |  "\{";
  |   ^

error: invalid escape sequence
2 |  "\}";
  |   ^

